# rusty_conway

./: Cargo.nix  Cargo.toml  README.md
examples/: Blinker  Blinker_alt  Glider
src/: conway.rs  main.rs  rusty-conway-cli.rs  rusty-conway.rs
