[package]
name = "rusty-conway"
version = "0.1.0"
authors = ["functional-tim <tim.gravert@web.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
graphics = "0.44"
num-bigint = "0.4"
num-traits = "0.2"
structopt = "0.3"

[[bin]]
name = "rusty-conway-cli"
path = "src/rusty-conway-cli.rs"

[[bin]]
name = "rusty-conway"
path = "src/rusty-conway"