[package]
name = "rusty-conway"
version = "0.1.0"
authors = ["functional-tim <tim.gravert@web.de>"]
edition = "2021"
description = "Game of life simulator."
readme = "README.md"
homepage = "https://codeberg.org/functional-tim/rusty_conway"
repository = "https://codeberg.org/functional-tim/rusty_conway"
license = "MIT OR Apache-2.0"
keywords = ["education", "conway", "Conway's game of life"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
exitcode = "^1.1"
#graphics = "0.44"
mortal = "0.2.4"
num-bigint = "0.4"
num-traits = "0.2"
structopt = "0.3"
tiny-skia = "0.11"

[[bin]]
name = "rusty-conway-cli"
path = "src/rusty-conway-cli.rs"

[[bin]]
name = "rusty-conway"
path = "src/rusty-conway.rs"

